--- a/dev/tests/tests/acceptance.suite.yml
+++ b/dev/tests/tests/acceptance.suite.yml
@@ -9,6 +9,7 @@ modules:
         - \Helper\Acceptance
         - WPDb
         - WPBrowser
+        - WPLoader
     config:
         WPBrowser:
             url: '%ACCEPTANCE_WP_URL%'
