--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-module-resolver": "^3.2.0",
+    "babel-plugin-react-css-modules": "^5.2.6",
     "browser-sync": "^2.26.7",
     "concat": "^1.0.3",
     "core-js": "^3.13.1",
