--- a/.github/workflows/deploy-stage.yml
+++ b/.github/workflows/deploy-stage.yml
@@ -15,7 +15,6 @@ jobs:
       DEPLOY_FOLDER: ./deploy
       ENVIRONMENT: staging
       DEPLOY_REPO: ${{ secrets.STAGE_DEPLOY_REPO }}
-      COMPOSER_AUTH: '{ "github-oauth": { "github.com": "${{ secrets.GITHUB_TOKEN }}" } }'
 
     steps:
 
@@ -24,7 +23,9 @@ jobs:
       - name: Setup PHP, with composer and extensions
         uses: shivammathur/setup-php@v2 #https://github.com/shivammathur/setup-php
         with:
-          tools: composer:v1
+          php-version: '7.4'
+        env:
+          COMPOSER_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       # Get Build Repository
       - name: Check out build branch
