--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -45,9 +45,11 @@ jobs:
 
       # Setup node version
       - name: Setup node version
-        uses: actions/setup-node@v1
+        id: nvm
+        run: echo ::set-output name=NODE_VERSION::$(cat .nvmrc)
+      - uses: actions/setup-node@v2
         with:
-          node-version: '14.15.1'
+          node-version: ${{ steps.nvm.outputs.NODE_VERSION }}
 
       # Cache node_modules TODO
 
