--- a/.github/workflows/deploy-review-app.yml
+++ b/.github/workflows/deploy-review-app.yml
@@ -70,11 +70,16 @@ jobs:
           fetch-depth: 0
           ref: ${{ github.event.pull_request.head.ref }}
 
-      # - name: Build Node
-      #   uses: ./.github/actions/build-node
+      - name: Cloning Actions
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+          repository: moderntribe/actions
+          token: ${{ secrets.GH_BOT_TOKEN }}
+          path: '.github/actions'
 
       - name: Build Node
-        uses: moderntribe/actions/buildnode@add_basic_sq1
+        uses: ./.github/actions/build-node
 
       # - name: Setup node version
       #   uses: actions/setup-node@v2
